--- a/example26/src/main/resources/application.properties
+++ b/example26/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.security.user.name=ivan
-spring.security.user.password=pass
+#spring.security.user.name=ivan
+#spring.security.user.password=pass
 
